--- a/Html/main.html
+++ b/Html/main.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="Javascript/codigo.js"></script>
   </head>
 
   <body>
@@ -33,5 +32,6 @@
       sapiente. Reiciendis?
     </p>
     <input type="button" value="Contar" onclick="contar()" />
+    <script src="../Javascript/codigo.js"></script>
   </body>
 </html>
